feat(core): establish passkey authentication A2
